RESOLVED FIXED56057
Frequent crash when printing in WebPageProxy::setAutodisplay
https://bugs.webkit.org/show_bug.cgi?id=56057
Summary Frequent crash when printing in WebPageProxy::setAutodisplay
Alexey Proskuryakov
Reported 2011-03-09 15:32:26 PST
The page could be closed while waiting for autodisplay timer to fire. <rdar://problem/9053290>
Attachments
proposed fix (1.27 KB, patch)
2011-03-09 15:39 PST, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2011-03-09 15:39:39 PST
Created attachment 85246 [details] proposed fix
Alexey Proskuryakov
Comment 2 2011-03-09 16:39:31 PST
Note You need to log in before you can comment on or make changes to this bug.