        Reviewed by Dan Bernstein.

Frequent crashes when printing in WebPageProxy::setAutodisplay
        https://bugs.webkit.org/show_bug.cgi?id=56057
        <rdar://problem/9053290>

        * UIProcess/API/mac/WKPrintingView.mm: (-[WKPrintingView _delayedResumeAutodisplayTimerFired]):
        Null check the page, there is no reason for it to still exist.



Canonical link: https://commits.webkit.org/70566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80675 268f45cc-cd09-0410-ab3c-d52691b4dbfc